tdf#132667 - Grab focus on the last inserted property

On removing/adding custom document properties, grab the focus on the
last empty shown name box.

Change-Id: Ifd66566d4ae9fa57b9f1a9aae5f9cb93dbb74070
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115872
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>