sfx2/source/dialog/dinfdlg.cxx
@@ -1492,7 +1492,6 @@ void CustomPropertiesWindow::CreateNewLine()
         pNewLine->m_xRemoveButton->get_buildable_name() + OString::number(nSize));
 
     pNewLine->DoTypeHdl(*pNewLine->m_xTypeBox);
-    pNewLine->m_xNameBox->grab_focus();
 }
 
 bool CustomPropertiesWindow::AreAllLinesValid() const
@@ -1768,6 +1767,13 @@ void CustomPropertiesWindow::ReloadLinesContent()
         }
 
         pLine->DoTypeHdl(*pLine->m_xTypeBox);
+    }
+
+    // tdf#132667 - grab focus on the last inserted property
+    if (i > 0 && m_aCustomProperties[nDataModelPos + i - 1]->m_sName.isEmpty())
+    {
+        CustomPropertyLine* pLine = m_aCustomPropertiesLines[i - 1].get();
+        pLine->m_xNameBox->grab_focus();
     }
 
     while (nDataModelPos + i >= GetTotalLineCount() && i < GetExistingLineCount())
